--- a/src/web/error_osnotsupported.html
+++ b/src/web/error_osnotsupported.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>NEW HTML FILE</title>
+		<title>Панель управления для робота</title>
 	</head>
 	<body>
-		<h1><strong>NEW HTML FILE</strong><h>
+		<h1><strong>Hello</strong><h>
 	</body>
 </html>
